--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,11 +5,12 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
 	<title>ISBFILM - Movie Collection</title>
-	<meta name="description" content="Movie Collection" />
-	<meta name="keywords" content="movie, nonton film, nonton" />
+	<meta name="description" content="Movie Collection, Nonton Film, Nonton Bioskop, LK21, Cinema" />
+	<meta name="keywords" content="movie, nonton film, nonton, film terbaru" />
 	<meta http-equiv="pragma" content="no-cache" />
 	<meta http-equiv="cache-control" content="no-cache" />
 	<meta http-equiv="expires" content="Tue, 18 May 2010 00:00:01 GMT" />
+	<meta name="google-site-verification" content="-IJNRTMKW0S4Ohr1-Tw0BnxNLYsW52DOPDOTIgJqGCw" />
 	<link rel='icon' type='image/png' href='/isbfilm.png'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
